<resources>
    <string name="app_name">Restaurants Riobamba</string>
    <string name="username_or_mail">Correo Electronico</string>
    <string name="password">Password</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="title_activity_menu">Restaurants</string>
    <string name="title_activity_register">Datos de Registracion</string>
    <string name="direccion_de_entrega">Direccion de Entrega</string>
    <string name="contrase_a">Contraseña</string>
    <string name="direccion_de_la_factura">Direccion de Factura</string>
    <string name="telefono">Telefono</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="direccion">Direccion</string>
    <string name="register_name">Registrarse</string>
    <string name="facebook_app_id">2844922982191209</string>
    <string name="fb_login_protocol_scheme">fb2844922982191209</string>
    <string name="Account">Perfil</string>
    <string name="List_Restaurants">Lista de Restaurantes</string>
    <string name="Categories">Categorias</string>
    <string name="About">Acerca de</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Cerrar Sesion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="registrate">Registrate</string>


</resources>
